Fix extra space at bottom with three modules

--- a/scss/_infomodule.scss
+++ b/scss/_infomodule.scss
@@ -70,7 +70,7 @@ info-module {
     }
   }
   &.one-third {
-    height: 33%;
+    height: 33.33%;
     .icon {
       margin-top: 10px;
       height: 14vh;
